--- a/views/ad_edit.html
+++ b/views/ad_edit.html
@@ -24,6 +24,16 @@
                         </div>
                     </div>
                     <div class="form-group">
+                        <label class="col-sm-2 control-label">类型</label>
+                        <div class="col-sm-10">
+                            <select id="type">
+                                <option value='agent'>代理公司</option>
+                                <option value='builder'>设计搭建公司</option>
+                                <option value='transport'>物流公司</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group">
                         <label class="col-sm-2 control-label">名称</label>
                         <div class="col-sm-10">
                             <input type="text" class="form-control hide" id="_id">
@@ -112,9 +122,12 @@
         $('#qq').val('');
     });
     $('#ad-save-btn').on('click',function(){
+        var type=$('#type').val();
         var id=$('#_id').val();
         var url='/ad/save';
         var param={
+            fairId:fairId,
+            type:type,
             name:$('#name').val(),
             contact:$('#contact').val(),
             tags:$('#tags').val(),
