--- a/views/ad_edit.html
+++ b/views/ad_edit.html
@@ -11,78 +11,90 @@
                 </h4>
             </div>
             <div class="modal-body">
-                <form id="add-form" class="form-horizontal" role="form" enctype="multipart/form-data">
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">Logo</label>
-                        <div class="col-sm-10">
-                            <input type="file"  name="adlogofile" id="adlogofile"/>
-                        </div>
-                        <div id="ad-previewdiv" class="col-xs-6 col-md-3 hide">
-                            <a href="#" class="thumbnail">
-                                <img id="ad-preview" src=""  alt="">
-                            </a>
-                        </div>
+                <ul class="nav nav-tabs">
+                    <li role="presentation" class="active"><a href="#new" data-toggle="tab">新建</a></li>
+                    <li role="presentation"><a href="#list" data-toggle="tab">列表</a></li>
+                </ul>
+                <br/>
+                <div class="tab-content">
+                    <div class="tab-pane fade in active" id="new">
+                        <form id="add-form" class="form-horizontal" role="form" enctype="multipart/form-data">
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">Logo</label>
+                                <div class="col-sm-10">
+                                    <input type="file"  name="adlogofile" id="adlogofile"/>
+                                </div>
+                                <div id="ad-previewdiv" class="col-xs-6 col-md-3 hide">
+                                    <a href="#" class="thumbnail">
+                                        <img id="ad-preview" src=""  alt="">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">类型</label>
+                                <div class="col-sm-10">
+                                    <select id="type">
+                                        <option value='agent'>代理公司</option>
+                                        <option value='builder'>设计搭建公司</option>
+                                        <option value='transport'>物流公司</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">名称</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control hide" id="_id">
+                                    <input type="text" class="form-control" id="name" placeholder="请输入广告名称">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">URL</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" id="url" placeholder="请输入URL">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">标签</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" id="tags" placeholder="请输入广告标签">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">联系人</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" id="contact" placeholder="请输入广告内容">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">电话</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" id="tel" placeholder="请输入联系电话">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">传真</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" id="fax" placeholder="请输入传真">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">Email</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" id="email" placeholder="请输入Email">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">QQ</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" id="qq" placeholder="请输入QQ">
+                                </div>
+                            </div>
+                        </form>
                     </div>
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">类型</label>
-                        <div class="col-sm-10">
-                            <select id="type">
-                                <option value='agent'>代理公司</option>
-                                <option value='builder'>设计搭建公司</option>
-                                <option value='transport'>物流公司</option>
-                            </select>
-                        </div>
+                    <div class="tab-pane fade" id="list">
+                        list
                     </div>
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">名称</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control hide" id="_id">
-                            <input type="text" class="form-control" id="name" placeholder="请输入广告名称">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">URL</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" id="url" placeholder="请输入URL">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">标签</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" id="tags" placeholder="请输入广告标签">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">联系人</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" id="contact" placeholder="请输入广告内容">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">电话</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" id="tel" placeholder="请输入联系电话">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">传真</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" id="fax" placeholder="请输入传真">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">Email</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" id="email" placeholder="请输入Email">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">QQ</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" id="qq" placeholder="请输入QQ">
-                        </div>
-                    </div>
-                </form>
+                </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">
@@ -164,4 +176,11 @@
         $('#ad-previewdiv').addClass('show')
         $('#ad-preview').attr('src',src);
     });
+    $('.nav-tabs a').click(function (e) {
+        $(this).tab('show')
+        //
+        if($(this).attr('href')=='#list'){
+
+        }
+    })
 </script>
