--- a/views/login.html
+++ b/views/login.html
@@ -155,8 +155,12 @@
                     password:$('#reg_pwd1').val()
                 },
                 success: function(data){
-                    alert("注册成功");
-                    $("#reg").modal("hide")
+                    if(data.status==200) {
+                        alert("注册成功");
+                        $("#reg").modal("hide")
+                    }else{
+                        alert(data.message);
+                    }
                 }
             })
         }
