--- a/views/personal.html
+++ b/views/personal.html
@@ -1,5 +1,4 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
-    <script src="/javascripts/page.js"></script>
     <div class="container">
         <p></p>
         <form class="form-inline">
@@ -33,10 +32,21 @@
                 <div class="modal-body">
                     <form id="editPwd-form" class="form-horizontal" role="form" enctype="multipart/form-data">
                         <div class="form-group">
-                            <label class="col-sm-2 control-label">名称</label>
+                            <label class="col-sm-2 control-label">旧密码</label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control hide" id="_id">
-                                <input type="text" class="form-control" id="chnName" placeholder="请输入名称">
+                                <input type="text" class="form-control" id="oldPwd" placeholder="请输入旧密码">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">新密码</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" id="newPwd" placeholder="请输入新密码">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">确认密码</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" id="newPwd2" placeholder="请输入新密码">
                             </div>
                         </div>
                     </form>
@@ -67,10 +77,9 @@
                 <div class="modal-body">
                     <form id="editInfo-form" class="form-horizontal" role="form" enctype="multipart/form-data">
                         <div class="form-group">
-                            <label class="col-sm-2 control-label">名称</label>
+                            <label class="col-sm-2 control-label">用户名</label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control hide" id="_id">
-                                <input type="text" class="form-control" id="chnName" placeholder="请输入名称">
+                                <input type="text" class="form-control" id="username" placeholder="请输入用户名">
                             </div>
                         </div>
                     </form>
