--- a/views/fair.html
+++ b/views/fair.html
@@ -25,9 +25,9 @@
                     <td>地点</td>
                     <td>时间</td>
                     <td>首期年份</td>
-                    <td>大厅</td>
+                    <td>展馆名称</td>
                     <td>主办方</td>
-                    <td>主办单位</td>
+                    <td>承办方</td>
                     <td>分类</td>
                     <td>网址</td>
                     <th>操作</th>
@@ -101,9 +101,9 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-2 control-label">大厅</label>
+                            <label class="col-sm-2 control-label">展馆名称</label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" id="hallName" placeholder="请输入大厅地点">
+                                <input type="text" class="form-control" id="hallName" placeholder="请输入展馆名称">
                             </div>
                         </div>
                         <div class="form-group">
@@ -113,9 +113,9 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-2 control-label">主办单位</label>
+                            <label class="col-sm-2 control-label">承办方</label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" id="undertaker" placeholder="请输入主办单位">
+                                <input type="text" class="form-control" id="undertaker" placeholder="请输入承办方">
                             </div>
                         </div>
                         <div class="form-group">
