--- a/views/fair.html
+++ b/views/fair.html
@@ -108,18 +108,6 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="sponsor" class="col-sm-2 control-label">主办方</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" id="sponsor" placeholder="请输入主办方">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">承办方</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" id="undertaker" placeholder="请输入承办方">
-                            </div>
-                        </div>
-                        <div class="form-group">
                             <label class="col-sm-2 control-label">分类</label>
                             <div class="col-sm-10">
                                 <input type="text" class="form-control" id="category" placeholder="请输入分类">
@@ -202,7 +190,7 @@
         <td id="category{{_id}}">{{category}}</td>
         <td id="website{{_id}}">{{website}}</td>
         <td>
-            <a onclick="sponsors('{{_id}}')"><span class="glyphicon glyphicon-pencil" data-toggle="modal" data-target="#sponsors-modal"/></a>&nbsp;&nbsp;&nbsp;&nbsp;
+            <a onclick="sponsors('{{_id}}')"><span class="glyphicon glyphicon-user" data-toggle="modal" data-target="#sponsors-modal"/></a>&nbsp;&nbsp;&nbsp;&nbsp;
             <a onclick="ad('{{_id}}')"><span class="glyphicon glyphicon-pencil"/></a>&nbsp;&nbsp;&nbsp;&nbsp;
             <a onclick="edit('{{_id}}')"><span class="glyphicon glyphicon-edit" data-toggle="modal" data-target="#edit"/></a>&nbsp;&nbsp;&nbsp;&nbsp;
             <a onclick="del('{{_id}}')"><span class="glyphicon glyphicon-remove"/></a>
@@ -258,8 +246,6 @@
         $('#time').val($('#time'+id).html());
         $('#firstYear').val($('#firstYear'+id).html());
         $('#hallName').val($('#hallName'+id).html());
-        $('#sponsor').val($('#sponsor'+id).html());
-        $('#undertaker').val($('#undertaker'+id).html());
         $('#category').val($('#category'+id).html());
         $('#website').val($('#website'+id).html());
     }
@@ -276,8 +262,6 @@
             time:$('#time').val(),
             firstYear:$('#firstYear').val(),
             hallName:$('#hallName').val(),
-            sponsor:$('#sponsor').val(),
-            undertaker:$('#undertaker').val(),
             category:$('#category').val(),
             website:$('#website').val()
         };
@@ -328,8 +312,6 @@
         $('#time').val('');
         $('#firstYear').val('');
         $('#hallName').val('');
-        $('#sponsor').val('');
-        $('#undertaker').val('');
         $('#category').val('');
         $('#website').val('');
     });
