--- a/views/fair_sponsors.html
+++ b/views/fair_sponsors.html
@@ -7,7 +7,7 @@
                     &times;
                 </button>
                 <h4 class="modal-title">
-                    广告添加
+                    主办方/承办方 管理
                 </h4>
             </div>
             <div class="modal-body">
@@ -21,9 +21,8 @@
                         <label class="col-sm-2 control-label"><span style="color: red;">*&nbsp;&nbsp;&nbsp;&nbsp;</span>类型</label>
                         <div class="col-sm-10">
                             <select id="new-type">
-                                <option value='agent'>代理公司</option>
-                                <option value='builder'>设计搭建公司</option>
-                                <option value='transport'>物流公司</option>
+                                <option value='agent'>主办方</option>
+                                <option value='builder'>承办方</option>
                             </select>
                         </div>
                     </div>
@@ -32,39 +31,10 @@
                     <div class="tab-pane fade in active" id="new">
                         <form id="add-form" class="form-horizontal" role="form" enctype="multipart/form-data">
                             <div class="form-group">
-                                <label class="col-sm-2 control-label">Logo</label>
-                                <div class="col-sm-10">
-                                    <input type="file"  name="ad-new-logofile" id="ad-new-logofile"/>
-                                </div>
-                                <div id="ad-new-previewdiv" class="col-xs-6 col-md-3 hide">
-                                    <a href="#" class="thumbnail">
-                                        <img id="ad-new-preview" src=""  alt="">
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="form-group">
                                 <label class="col-sm-2 control-label">名称</label>
                                 <div class="col-sm-10">
                                     <input type="text" class="form-control hide" id="new-_id">
                                     <input type="text" class="form-control" id="new-name" placeholder="请输入广告名称">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="col-sm-2 control-label">URL</label>
-                                <div class="col-sm-10">
-                                    <input type="text" class="form-control" id="new-url" placeholder="请输入URL">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="col-sm-2 control-label">标签</label>
-                                <div class="col-sm-10">
-                                    <input type="text" class="form-control" id="new-tags" placeholder="请输入广告标签">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="col-sm-2 control-label">联系人</label>
-                                <div class="col-sm-10">
-                                    <input type="text" class="form-control" id="new-contact" placeholder="请输入广告内容">
                                 </div>
                             </div>
                             <div class="form-group">
@@ -85,33 +55,17 @@
                                     <input type="text" class="form-control" id="new-email" placeholder="请输入Email">
                                 </div>
                             </div>
-                            <div class="form-group">
-                                <label class="col-sm-2 control-label">QQ</label>
-                                <div class="col-sm-10">
-                                    <input type="text" class="form-control" id="new-qq" placeholder="请输入QQ">
-                                </div>
-                            </div>
                         </form>
                     </div>
                     <div class="tab-pane fade" id="datalist">
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <div class="input-group">
-                                    <input type="text" class="form-control" placeholder="Search for..." id="search">
-                                    <span class="input-group-btn">
-                                        <button class="btn btn-default" type="button" id="search-btn">Go!</button>
-                                    </span>
-                                </div><!-- /input-group -->
-                            </div><!-- /.col-lg-6 -->
-                        </div>
                         <br>
                         <table class="table table-bordered">
                             <thead>
                             <tr>
-                                <td>Logo</td>
                                 <td>名称</td>
-                                <td>URL</td>
-                                <td>标签</td>
+                                <td>电话</td>
+                                <td>传真</td>
+                                <td>Email</td>
                                 <td>操作</td>
                             </tr>
                             </thead>
@@ -130,10 +84,23 @@
                 <button type="button" class="btn btn-default" data-dismiss="modal">
                     关闭
                 </button>
-                <button type="button" class="btn btn-primary" id="ad-save-btn">
+                <button type="button" class="btn btn-primary" id="sponsors-save-btn">
                     保存
                 </button>
             </div>
         </div>
     </div><!-- /.modal-content -->
 </div><!-- /.modal -->
+<script id="sponsors-list-template" type="text/x-handlebars-template">
+    {{#each this.list}}
+    <tr>
+        <td>{{name}}</td>
+        <td>{{tel}}</td>
+        <td>{{fax}}</td>
+        <td>{{Email}}</td>
+        <td>
+            <span class="glyphicon glyphicon-minus"/></a>
+        </td>
+    </tr>
+    {{/each}}
+</script>
