--- a/views/fair.html
+++ b/views/fair.html
@@ -187,7 +187,7 @@
         <td id="hallName{{_id}}">{{hallName}}</td>
         <td id="sponsor{{_id}}">{{sponsor}}</td>
         <td id="undertaker{{_id}}">{{undertaker}}</td>
-        <td id="category{{_id}}">{{category}}</td>
+        <td id="category{{_id}}">{{categories}}</td>
         <td id="website{{_id}}">{{website}}</td>
         <td>
             <a onclick="sponsors('{{_id}}')"><span class="glyphicon glyphicon-user" data-toggle="modal" data-target="#sponsors-modal"/></a>&nbsp;&nbsp;&nbsp;&nbsp;
