--- a/views/ad_edit.html
+++ b/views/ad_edit.html
@@ -17,21 +17,19 @@
                     <li role="presentation"><a href="#datalist" data-toggle="tab">列表</a></li>
                 </ul>
                 <br/>
-                <form class="form-horizontal" role="form">
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label"><span style="color: red;">*&nbsp;&nbsp;&nbsp;&nbsp;</span>类型</label>
-                        <div class="col-sm-10">
-                            <select id="new-type">
-                                <option value='agent'>代理公司</option>
-                                <option value='builder'>设计搭建公司</option>
-                                <option value='transport'>物流公司</option>
-                            </select>
-                        </div>
-                    </div>
-                 </form>
                 <div class="tab-content">
                     <div class="tab-pane fade in active" id="new">
                         <form id="add-form" class="form-horizontal" role="form" enctype="multipart/form-data">
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label"><span style="color: red;">*&nbsp;&nbsp;&nbsp;&nbsp;</span>类型</label>
+                                <div class="col-sm-10">
+                                    <select id="new-type">
+                                        <option value='agent'>代理公司</option>
+                                        <option value='builder'>设计搭建公司</option>
+                                        <option value='transport'>物流公司</option>
+                                    </select>
+                                </div>
+                            </div>
                             <div class="form-group">
                                 <label class="col-sm-2 control-label">Logo</label>
                                 <div class="col-sm-10">
@@ -109,6 +107,7 @@
                         <table class="table table-bordered">
                             <thead>
                             <tr>
+                                <td>类型</td>
                                 <td>Logo</td>
                                 <td>名称</td>
                                 <td>URL</td>
@@ -267,6 +266,17 @@
 <script id="ad-list-template" type="text/x-handlebars-template">
     {{#each this.list}}
     <tr>
+        <td>
+            {{#compare type "agent"}}
+            代理公司
+            {{/compare}}
+            {{#compare type "builder"}}
+            设计搭建公司
+            {{/compare}}
+            {{#compare type  "transport"}}
+            物流公司
+            {{/compare}}
+        </td>
         <td>
             {{#if pic}}
             <div style="width:100px;heigh:100px">
