--- a/views/fair.html
+++ b/views/fair.html
@@ -13,7 +13,7 @@
                 <input class="btn btn-success" type="button" value="添加" data-toggle="modal" data-target="#edit">
             </div>
             <div class="form-group">
-                <input class="btn btn-warning" type="button" value="导入" data-toggle="modal" data-target="#import">
+                <input class="btn btn-warning" type="button" value="导入" onclick="location.href='./fair_import'">
             </div>
         </form>
         <table class="table table-bordered">
@@ -165,6 +165,32 @@
             </div>
         </div><!-- /.modal-content -->
     </div><!-- /.modal -->
+    <div class="modal fade" style="width: auto" id="audit" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog" style="width: 300px">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close"
+                            data-dismiss="modal" aria-hidden="true">
+                        &times;
+                    </button>
+                    <h4 class="modal-title">
+                        审核
+                    </h4>
+                </div>
+                <div class="modal-body">
+                    <button type="button" class="btn btn-danger" id="audit-success-btn">
+                        通过
+                    </button>
+                    <button type="button" class="btn btn-primary" id="audit-fail-btn">
+                        失败
+                    </button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">
+                        关闭
+                    </button>
+                </div>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal -->
 </html>
 <script id="list-template" type="text/x-handlebars-template">
     {{#each data.list}}
@@ -186,8 +212,8 @@
         <td id="hallName{{_id}}">{{hallName}}</td>
         <!--<td id="sponsor{{_id}}">{{sponsor}}</td>
         <td id="undertaker{{_id}}">{{undertaker}}</td>-->
-        <td id="category{{_id}}">{{categories}}</td>
-        <td id="website{{_id}}">{{website}}</td>
+        <td id="category{{_id}}"><a title="{{categories}}">{{#slice categories}}{{/slice}}</a></td>
+        <td id="website{{_id}}"><a href='{{website}}' title="{{website}}">{{#url_slice website}}{{/url_slice}}</a></td>
         <td id="status{{_id}}">
             {{#compare status 0}}
                 未审核
@@ -197,10 +223,11 @@
             {{/compare}}
         </td>
         <td>
-            <a onclick="sponsors('{{_id}}')"><span class="glyphicon glyphicon-user" data-toggle="modal" data-target="#sponsors-modal"/></a>&nbsp;&nbsp;&nbsp;&nbsp;
-            <a onclick="ad('{{_id}}')"><span class="glyphicon glyphicon-pencil"/></a>&nbsp;&nbsp;&nbsp;&nbsp;
-            <a onclick="edit('{{_id}}')"><span class="glyphicon glyphicon-edit" data-toggle="modal" data-target="#edit"/></a>&nbsp;&nbsp;&nbsp;&nbsp;
-            <a onclick="del('{{_id}}')"><span class="glyphicon glyphicon-remove"/></a>
+            <a onclick="sponsors('{{_id}}')" title="主办方/承办方管理"><span class="glyphicon glyphicon-user" data-toggle="modal" data-target="#sponsors-modal"/></a>&nbsp;&nbsp;&nbsp;&nbsp;
+            <a onclick="ad('{{_id}}')" title="广告管理"><span class="glyphicon glyphicon-pencil"/></a>&nbsp;&nbsp;&nbsp;&nbsp;
+            <a title="审核"><span class="glyphicon glyphicon-stats" data-toggle="modal" data-target="#audit"/></a>&nbsp;&nbsp;&nbsp;&nbsp;
+            <a onclick="edit('{{_id}}')" title="修改"><span class="glyphicon glyphicon-edit" data-toggle="modal" data-target="#edit"/></a>&nbsp;&nbsp;&nbsp;&nbsp;
+            <a onclick="del('{{_id}}')" title="删除"><span class="glyphicon glyphicon-remove"/></a>
         </td>
     </tr>
     {{/each}}
@@ -216,7 +243,7 @@
         }
         var param={
             page:pageNo,
-            limit:5
+            limit:10
         }
         if(search){
             param.search=search;
@@ -327,5 +354,11 @@
         var src = window.URL.createObjectURL(f);
         $('#previewdiv').addClass('show')
         $('#preview').attr('src',src);
+    });
+    $('#audit-success-btn').on('click', function() {
+        $("#audit").modal("hide")
+    });
+    $('#audit-fail-btn').on('click', function() {
+        $("#audit").modal("hide")
     });
 </script>
