--- a/views/fair.html
+++ b/views/fair.html
@@ -225,7 +225,7 @@
         <td>
             <a onclick="sponsors('{{_id}}')" title="主办方/承办方管理"><span class="glyphicon glyphicon-user" data-toggle="modal" data-target="#sponsors-modal"/></a>&nbsp;&nbsp;&nbsp;&nbsp;
             <a onclick="ad('{{_id}}')" title="广告管理"><span class="glyphicon glyphicon-pencil"/></a>&nbsp;&nbsp;&nbsp;&nbsp;
-            <a title="审核"><span class="glyphicon glyphicon-stats" data-toggle="modal" data-target="#audit"/></a>&nbsp;&nbsp;&nbsp;&nbsp;
+            <a onclick="audit('{{_id}}')" title="审核"><span class="glyphicon glyphicon-stats" data-toggle="modal" data-target="#audit"/></a>&nbsp;&nbsp;&nbsp;&nbsp;
             <a onclick="edit('{{_id}}')" title="修改"><span class="glyphicon glyphicon-edit" data-toggle="modal" data-target="#edit"/></a>&nbsp;&nbsp;&nbsp;&nbsp;
             <a onclick="del('{{_id}}')" title="删除"><span class="glyphicon glyphicon-remove"/></a>
         </td>
@@ -355,10 +355,29 @@
         $('#previewdiv').addClass('show')
         $('#preview').attr('src',src);
     });
+    var audit_curr_fairId;
+    function audit(id){
+        audit_curr_fairId=id;
+    }
+    $('#audit').on('hide', function() {
+        audit_curr_fairId=null;
+    });
     $('#audit-success-btn').on('click', function() {
-        $("#audit").modal("hide")
+        $.get("/fair/audit",
+                {
+                    _id:audit_curr_fairId,
+                    status: 1
+                }, function(result){
+                    $("#audit").modal("hide")
+                });
     });
     $('#audit-fail-btn').on('click', function() {
-        $("#audit").modal("hide")
+        $.get("/fair/audit",
+                {
+                    _id:audit_curr_fairId,
+                    status: 2
+                }, function(result){
+                    $("#audit").modal("hide")
+                });
     });
 </script>
