--- a/views/fair.html
+++ b/views/fair.html
@@ -109,7 +109,7 @@
                         <div class="form-group">
                             <label class="col-sm-2 control-label">分类</label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" id="category" placeholder="请输入分类">
+                                <input type="text" class="form-control" id="category" placeholder="请输入分类，逗号分隔">
                             </div>
                         </div>
                         <div class="form-group">
@@ -212,8 +212,8 @@
         <td id="hallName{{_id}}">{{hallName}}</td>
         <!--<td id="sponsor{{_id}}">{{sponsor}}</td>
         <td id="undertaker{{_id}}">{{undertaker}}</td>-->
-        <td id="category{{_id}}"><a title="{{categories}}">{{#slice categories}}{{/slice}}</a></td>
-        <td id="website{{_id}}"><a href='{{website}}' title="{{website}}">{{#url_slice website}}{{/url_slice}}</a></td>
+        <td><a title="{{categories}}" id="category{{_id}}">{{#slice categories}}{{/slice}}</a></td>
+        <td id="website{{_id}}">{{website}}</td>
         <td id="status{{_id}}">
             {{#compare status 0}}
                 未审核
@@ -283,7 +283,7 @@
         $('#time').val($('#time'+id).html());
         $('#firstYear').val($('#firstYear'+id).html());
         $('#hallName').val($('#hallName'+id).html());
-        $('#category').val($('#category'+id).html());
+        $('#category').val($('#category'+id).attr('title'));
         $('#website').val($('#website'+id).html());
     }
     $('#search-btn').on('click',function(){
